--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
     "react-is": "^18.3.1",
-    "react-leaflet": "^5.0.0",
+    "react-leaflet": "^4.2.1",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "recharts": "^3.2.0",
@@ -64,6 +64,11 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
     "zod": "^3.25.76"
+  },
+  "overrides": {
+    "react-leaflet": {
+      "@react-leaflet/core": "^2.1.0"
+    }
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
