feat: Fix Vercel deployment - downgrade react-leaflet, add custom icons, configure Render DB

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 # Database Configuration
-DATABASE_URL=postgresql://username:password@localhost:5432/marine_db
+DATABASE_URL=postgresql://marinedata_user:2LP1conxMxjkGZAn40xrleDIiOehcR5u@dpg-d34o0sffte5s73a9vmj0-a.oregon-postgres.render.com/marinedata
 REDIS_URL=redis://localhost:6379
 
 # API Keys
@@ -10,7 +10,8 @@ GROQ_API_KEY=your-groq-api-key-here
 # Security
 SECRET_KEY=your-secret-key-here
 ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
+ACCESS_TOK
+EN_EXPIRE_MINUTES=30
 
 # Environment
 ENVIRONMENT=development
