Fix CORS configuration for Vercel-Render deployment

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Backend API Configuration
-VITE_API_URL=http://127.0.0.1:8001/api/v1
+VITE_API_URL=https://sih-1zth.onrender.com/api/v1
 
 # Database Configuration
 DATABASE_URL=postgresql://marinedata_user:2LP1conxMxjkGZAn40xrleDIiOehcR5u@dpg-d34o0sffte5s73a9vmj0-a.oregon-postgres.render.com/marinedata
