feat(ai): integrate AI module and add OBIS dataset details API
- Add ai router to the main api_router with prefix "/ai" and tag "ai"
- Introduce gemini_api_key setting for LLM API configuration
- Implement get_dataset_details method in OBISClient for detailed dataset info retrieval
- Add google-generativeai dependency to requirements.txt
- Add AIIntegration route and page in the frontend application
- Include AI Integration item in Navbar with Brain icon for navigation to AI features

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ httpx==0.25.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
 groq==0.4.1
+google-generativeai==0.3.2
 pandas==2.1.4
 numpy==1.25.2
 sqlalchemy==2.0.23
